--- a/src/server/sqlrnotificationdeclarations.cpp.in
+++ b/src/server/sqlrnotificationdeclarations.cpp.in
@@ -1,3 +1,2 @@
 sqlrnotification	*new_sqlrnotification_@module@(sqlrnotifications *ns,
-							xmldomnode *parameters,
-							bool debug);
+							xmldomnode *parameters);
