--- a/src/server/sqlrdirectiveassignments.cpp.in
+++ b/src/server/sqlrdirectiveassignments.cpp.in
@@ -1,3 +1,3 @@
 	if (!charstring::compare(module,"@module@")) {
-		tr=new_sqlrdirective_@module@(pvt->_cont,this,directive);
+		dr=new_sqlrdirective_@module@(pvt->_cont,this,directive);
 	} else
