--- a/src/server/sqlrnotificationassignments.cpp.in
+++ b/src/server/sqlrnotificationassignments.cpp.in
@@ -1,3 +1,3 @@
 	if (!charstring::compare(module,"@module@")) {
-		n=new_sqlrnotification_@module@(this,notification,pvt->_debug);
+		n=new_sqlrnotification_@module@(this,notification);
 	} else
