--- a/src/server/sqlrprotocoldeclarations.cpp.in
+++ b/src/server/sqlrprotocoldeclarations.cpp.in
@@ -1,3 +1,3 @@
 sqlrprotocol	*new_sqlrprotocol_@module@(sqlrservercontroller *cont,
 							sqlrprotocols *ps,
-							xmdomnode *parameters);
+							xmldomnode *parameters);
