--- a/src/Makefile
+++ b/src/Makefile
@@ -53,6 +53,9 @@ all-resultsettranslations:
 all-resultsetrowtranslations:
 	cd resultsetrowtranslations $(AND) $(MAKE) all
 
+all-resultsetrowblocktranslations:
+	cd resultsetrowblocktranslations $(AND) $(MAKE) all
+
 all-resultsetheadertranslations:
 	cd resultsetheadertranslations $(AND) $(MAKE) all
 
@@ -82,6 +85,7 @@ clean:
 	cd translations $(AND) $(MAKE) clean
 	cd resultsettranslations $(AND) $(MAKE) clean
 	cd resultsetrowtranslations $(AND) $(MAKE) clean
+	cd resultsetrowblocktranslations $(AND) $(MAKE) clean
 	cd resultsetheadertranslations $(AND) $(MAKE) clean
 	cd filters $(AND) $(MAKE) clean
 	cd connections $(AND) $(MAKE) clean
@@ -141,6 +145,9 @@ install-resultsettranslations:
 install-resultsetrowtranslations:
 	cd resultsetrowtranslations $(AND) $(MAKE) install
 
+install-resultsetrowblocktranslations:
+	cd resultsetrowblocktranslations $(AND) $(MAKE) install
+
 install-resultsetheadertranslations:
 	cd resultsetheadertranslations $(AND) $(MAKE) install
 
@@ -170,6 +177,7 @@ uninstall:
 	cd translations $(AND) $(MAKE) uninstall
 	cd resultsettranslations $(AND) $(MAKE) uninstall
 	cd resultsetrowtranslations $(AND) $(MAKE) uninstall
+	cd resultsetrowblocktranslations $(AND) $(MAKE) uninstall
 	cd resultsetheadertranslations $(AND) $(MAKE) uninstall
 	cd filters $(AND) $(MAKE) uninstall
 	cd connections $(AND) $(MAKE) uninstall
