--- a/src/server/Makefile
+++ b/src/server/Makefile
@@ -18,6 +18,8 @@ LIBSQLRSERVERSRCS = \
 	sqlrresultsettranslation.cpp \
 	sqlrresultsetrowtranslations.cpp \
 	sqlrresultsetrowtranslation.cpp \
+	sqlrresultsetrowblocktranslations.cpp \
+	sqlrresultsetrowblocktranslation.cpp \
 	sqlrresultsetheadertranslations.cpp \
 	sqlrresultsetheadertranslation.cpp \
 	sqlrtriggers.cpp \
@@ -57,6 +59,8 @@ LIBSQLRSERVERLOBJS = \
 	sqlrresultsettranslation.$(OBJ) \
 	sqlrresultsetrowtranslations.$(OBJ) \
 	sqlrresultsetrowtranslation.$(OBJ) \
+	sqlrresultsetrowblocktranslations.$(OBJ) \
+	sqlrresultsetrowblocktranslation.$(OBJ) \
 	sqlrresultsetheadertranslations.$(OBJ) \
 	sqlrresultsetheadertranslation.$(OBJ) \
 	sqlrtriggers.$(OBJ) \
@@ -337,6 +341,22 @@ sqlrresultsetrowtranslationassignments.cpp: sqlrresultsetrowtranslationassignmen
 		sed -e "s|@module@|$$module|g" $< >> $@; \
 	done
 
+sqlrresultsetrowblocktranslationdeclarations.cpp: sqlrresultsetrowblocktranslationdeclarations.cpp.in
+	$(RM) $@
+	for file in `ls ../resultsetrowblocktranslations/*.$(OBJ) 2> /dev/null`; \
+	do \
+		module=`basename $$file .$(OBJ)`; \
+		sed -e "s|@module@|$$module|g" $< >> $@; \
+	done
+
+sqlrresultsetrowblocktranslationassignments.cpp: sqlrresultsetrowblocktranslationassignments.cpp.in
+	$(RM) $@
+	for file in `ls ../resultsetrowblocktranslations/*.$(OBJ) 2> /dev/null`; \
+	do \
+		module=`basename $$file .$(OBJ)`; \
+		sed -e "s|@module@|$$module|g" $< >> $@; \
+	done
+
 sqlrresultsetheadertranslationdeclarations.cpp: sqlrresultsetheadertranslationdeclarations.cpp.in
 	$(RM) $@
 	for file in `ls ../resultsetheadertranslations/*.$(OBJ) 2> /dev/null`; \
@@ -419,6 +439,8 @@ install: $(INSTALLLIB)
 	$(CP) sqlrelay/private/sqlrquery.h $(includedir)/sqlrelay/private/sqlrquery.h
 	$(CP) sqlrelay/private/sqlrresultsetrowtranslation.h $(includedir)/sqlrelay/private/sqlrresultsetrowtranslation.h
 	$(CP) sqlrelay/private/sqlrresultsetrowtranslations.h $(includedir)/sqlrelay/private/sqlrresultsetrowtranslations.h
+	$(CP) sqlrelay/private/sqlrresultsetrowblocktranslation.h $(includedir)/sqlrelay/private/sqlrresultsetrowblocktranslation.h
+	$(CP) sqlrelay/private/sqlrresultsetrowblocktranslations.h $(includedir)/sqlrelay/private/sqlrresultsetrowblocktranslations.h
 	$(CP) sqlrelay/private/sqlrresultsetheadertranslation.h $(includedir)/sqlrelay/private/sqlrresultsetheadertranslation.h
 	$(CP) sqlrelay/private/sqlrresultsetheadertranslations.h $(includedir)/sqlrelay/private/sqlrresultsetheadertranslations.h
 	$(CP) sqlrelay/private/sqlrresultsettranslation.h $(includedir)/sqlrelay/private/sqlrresultsettranslation.h
@@ -460,6 +482,8 @@ install: $(INSTALLLIB)
 	$(CHMOD) 644 $(includedir)/sqlrelay/private/sqlrquery.h
 	$(CHMOD) 644 $(includedir)/sqlrelay/private/sqlrresultsetrowtranslation.h
 	$(CHMOD) 644 $(includedir)/sqlrelay/private/sqlrresultsetrowtranslations.h
+	$(CHMOD) 644 $(includedir)/sqlrelay/private/sqlrresultsetrowblocktranslation.h
+	$(CHMOD) 644 $(includedir)/sqlrelay/private/sqlrresultsetrowblocktranslations.h
 	$(CHMOD) 644 $(includedir)/sqlrelay/private/sqlrresultsetheadertranslation.h
 	$(CHMOD) 644 $(includedir)/sqlrelay/private/sqlrresultsetheadertranslations.h
 	$(CHMOD) 644 $(includedir)/sqlrelay/private/sqlrresultsettranslation.h
@@ -521,6 +545,8 @@ uninstall: $(UNINSTALLLIB)
 		$(includedir)/sqlrelay/private/sqlrresultsetheadertranslations.h \
 		$(includedir)/sqlrelay/private/sqlrresultsetrowtranslation.h \
 		$(includedir)/sqlrelay/private/sqlrresultsetrowtranslations.h \
+		$(includedir)/sqlrelay/private/sqlrresultsetrowblocktranslation.h \
+		$(includedir)/sqlrelay/private/sqlrresultsetrowblocktranslations.h \
 		$(includedir)/sqlrelay/private/sqlrresultsettranslation.h \
 		$(includedir)/sqlrelay/private/sqlrresultsettranslations.h \
 		$(includedir)/sqlrelay/private/sqlrrouter.h \
