--- a/src/api/Makefile
+++ b/src/api/Makefile
@@ -38,8 +38,8 @@ all-phppdo:
 all-java:
 	cd java $(AND) $(MAKE) all
 
-all-jdbc:
-	#cd jdbc $(AND) $(MAKE) all
+#all-jdbc:
+#	cd jdbc $(AND) $(MAKE) all
 
 all-tcl:
 	cd tcl $(AND) $(MAKE) all
@@ -140,8 +140,8 @@ install-phppdo:
 install-java:
 	cd java $(AND) $(MAKE) install
 
-install-jdbc:
-	#cd jdbc $(AND) $(MAKE) install
+#install-jdbc:
+#	cd jdbc $(AND) $(MAKE) install
 
 install-tcl:
 	cd tcl $(AND) $(MAKE) install
