more windows tweaking

--- a/src/api/Makefile
+++ b/src/api/Makefile
@@ -38,8 +38,7 @@ all-phppdo:
 all-java:
 	cd java $(AND) $(MAKE) all
 
-#all-jdbc:
-#	cd jdbc $(AND) $(MAKE) all
+all-jdbc:
 
 all-tcl:
 	cd tcl $(AND) $(MAKE) all
@@ -140,8 +139,7 @@ install-phppdo:
 install-java:
 	cd java $(AND) $(MAKE) install
 
-#install-jdbc:
-#	cd jdbc $(AND) $(MAKE) install
+install-jdbc:
 
 install-tcl:
 	cd tcl $(AND) $(MAKE) install
