--- a/config.h.in
+++ b/config.h.in
@@ -225,6 +225,9 @@
 /* Some systems have SQLLEN/SQLULEN parameters for SQLExtendedFetch */
 #undef HAVE_SQLEXTENDEDFETCH_LEN
 
+/* SQLite supports sqlite3_column_table_name */
+#undef HAVE_SQLITE3_COLUMN_TABLE_NAME
+
 /* SQLite supports sqlite3_malloc */
 #undef HAVE_SQLITE3_FREE_WITH_CHAR
 
