--- a/src/loggers/Makefile
+++ b/src/loggers/Makefile
@@ -12,6 +12,7 @@ include ../../config.mk
 
 all: $(SQLR)logger_debug.$(LIBEXT) \
 	$(SQLR)logger_slowqueries.$(LIBEXT) \
+	$(SQLR)logger_stalecursors.$(LIBEXT) \
 	$(SQLR)logger_custom_nw.$(LIBEXT) \
 	$(SQLR)logger_custom_sc.$(LIBEXT)
 
@@ -25,6 +26,9 @@ $(SQLR)logger_debug.$(LIBEXT): debug.cpp debug.$(OBJ)
 $(SQLR)logger_slowqueries.$(LIBEXT): slowqueries.cpp slowqueries.$(OBJ)
 	$(LTLINK) $(LINK) $(OUT)$@ slowqueries.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
 
+$(SQLR)logger_stalecursors.$(LIBEXT): stalecursors.cpp stalecursors.$(OBJ)
+	$(LTLINK) $(LINK) $(OUT)$@ stalecursors.$(OBJ) $(LDFLAGS) $(SQLRLOGGER_STALECURSORSLIBS) $(PLUGINLIBS) $(MODLINKFLAGS)
+
 $(SQLR)logger_custom_nw.$(LIBEXT): custom_nw.cpp custom_nw.$(OBJ)
 	$(LTLINK) $(LINK) $(OUT)$@ custom_nw.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
 
@@ -37,6 +41,7 @@ installdll:
 	$(MKINSTALLDIRS) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)logger_debug.$(LIBEXT) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)logger_slowqueries.$(LIBEXT) $(libexecdir)
+	$(LTINSTALL) $(CP) $(SQLR)logger_stalecursors.$(LIBEXT) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)logger_custom_nw.$(LIBEXT) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)logger_custom_sc.$(LIBEXT) $(libexecdir)
 
@@ -52,6 +57,10 @@ installsharedlib:
 	$(RM) $(libexecdir)/$(SQLR)logger_slowqueries.a
 	$(RM) $(libexecdir)/$(SQLR)logger_slowqueries.$(LIBEXT)
 	$(MODULERENAME) $(libexecdir)/$(SQLR)logger_slowqueries.so so $(MODULESUFFIX)
+	$(LTINSTALL) $(CP) $(SQLR)logger_stalecursors.$(LIBEXT) $(libexecdir)
+	$(RM) $(libexecdir)/$(SQLR)logger_stalecursors.a
+	$(RM) $(libexecdir)/$(SQLR)logger_stalecursors.$(LIBEXT)
+	$(MODULERENAME) $(libexecdir)/$(SQLR)logger_stalecursors.so so $(MODULESUFFIX)
 	$(LTINSTALL) $(CP) $(SQLR)logger_custom_nw.$(LIBEXT) $(libexecdir)
 	$(RM) $(libexecdir)/$(SQLR)logger_custom_nw.a
 	$(RM) $(libexecdir)/$(SQLR)logger_custom_nw.$(LIBEXT)
@@ -66,7 +75,9 @@ uninstall:
 		$(libexecdir)/$(SQLR)logger_custom_sc.* \
 		$(libexecdir)/$(SQLR)logger_debug.* \
 		$(libexecdir)/$(SQLR)logger_slowqueries.* \
+		$(libexecdir)/$(SQLR)logger_stalecursors.* \
 		$(libexecdir)/sqlrlogger_custom_nw.* \
 		$(libexecdir)/sqlrlogger_custom_sc.* \
 		$(libexecdir)/sqlrlogger_debug.* \
-		$(libexecdir)/sqlrlogger_slowqueries.*
+		$(libexecdir)/sqlrlogger_slowqueries.* \
+		$(libexecdir)/sqlrlogger_stalecursors.*
