--- a/src/server/Makefile
+++ b/src/server/Makefile
@@ -137,7 +137,7 @@ $(SQLR)-status$(EXE): sqlr-status.cpp sqlr-status.$(OBJ)
 
 sqlrserverconnectiondeclarations.cpp: sqlrserverconnectiondeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../connections/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../connections/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -145,7 +145,7 @@ sqlrserverconnectiondeclarations.cpp: sqlrserverconnectiondeclarations.cpp.in
 
 sqlrserverconnectionassignments.cpp: sqlrserverconnectionassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../connections/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../connections/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -153,7 +153,7 @@ sqlrserverconnectionassignments.cpp: sqlrserverconnectionassignments.cpp.in
 
 sqlrprotocoldeclarations.cpp: sqlrprotocoldeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../protocols/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../protocols/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -161,7 +161,7 @@ sqlrprotocoldeclarations.cpp: sqlrprotocoldeclarations.cpp.in
 
 sqlrprotocolassignments.cpp: sqlrprotocolassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../protocols/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../protocols/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -169,7 +169,7 @@ sqlrprotocolassignments.cpp: sqlrprotocolassignments.cpp.in
 
 sqlrparserdeclarations.cpp: sqlrparserdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../parsers/*.$(OBJ) 2> /dev/null | grep -v sqlre`; \
+	for file in `ls ../../parsers/*.$(OBJ) 2> /dev/null | grep -v sqlre`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -177,7 +177,7 @@ sqlrparserdeclarations.cpp: sqlrparserdeclarations.cpp.in
 
 sqlrparserassignments.cpp: sqlrparserassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../parsers/*.$(OBJ) 2> /dev/null | grep -v sqlre`; \
+	for file in `ls ../../parsers/*.$(OBJ) 2> /dev/null | grep -v sqlre`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -185,7 +185,7 @@ sqlrparserassignments.cpp: sqlrparserassignments.cpp.in
 
 sqlrloggerdeclarations.cpp: sqlrloggerdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../loggers/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../loggers/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -193,7 +193,7 @@ sqlrloggerdeclarations.cpp: sqlrloggerdeclarations.cpp.in
 
 sqlrloggerassignments.cpp: sqlrloggerassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../loggers/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../loggers/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -201,7 +201,7 @@ sqlrloggerassignments.cpp: sqlrloggerassignments.cpp.in
 
 sqlrnotificationdeclarations.cpp: sqlrnotificationdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../notifications/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../notifications/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -209,7 +209,7 @@ sqlrnotificationdeclarations.cpp: sqlrnotificationdeclarations.cpp.in
 
 sqlrnotificationassignments.cpp: sqlrnotificationassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../notifications/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../notifications/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -217,7 +217,7 @@ sqlrnotificationassignments.cpp: sqlrnotificationassignments.cpp.in
 
 sqlrscheduledeclarations.cpp: sqlrscheduledeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../schedules/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../schedules/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -225,7 +225,7 @@ sqlrscheduledeclarations.cpp: sqlrscheduledeclarations.cpp.in
 
 sqlrscheduleassignments.cpp: sqlrscheduleassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../schedules/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../schedules/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -233,7 +233,7 @@ sqlrscheduleassignments.cpp: sqlrscheduleassignments.cpp.in
 
 sqlrrouterdeclarations.cpp: sqlrrouterdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../routers/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../routers/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -241,7 +241,7 @@ sqlrrouterdeclarations.cpp: sqlrrouterdeclarations.cpp.in
 
 sqlrrouterassignments.cpp: sqlrrouterassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../routers/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../routers/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -249,7 +249,7 @@ sqlrrouterassignments.cpp: sqlrrouterassignments.cpp.in
 
 sqlrpwdencdeclarations.cpp: sqlrpwdencdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../pwdencs/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../pwdencs/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -257,7 +257,7 @@ sqlrpwdencdeclarations.cpp: sqlrpwdencdeclarations.cpp.in
 
 sqlrpwdencassignments.cpp: sqlrpwdencassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../pwdencs/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../pwdencs/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -265,7 +265,7 @@ sqlrpwdencassignments.cpp: sqlrpwdencassignments.cpp.in
 
 sqlrauthdeclarations.cpp: sqlrauthdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../auths/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../auths/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -273,7 +273,7 @@ sqlrauthdeclarations.cpp: sqlrauthdeclarations.cpp.in
 
 sqlrauthassignments.cpp: sqlrauthassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../auths/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../auths/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -281,7 +281,7 @@ sqlrauthassignments.cpp: sqlrauthassignments.cpp.in
 
 sqlrdirectivedeclarations.cpp: sqlrdirectivedeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../directives/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../directives/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -289,7 +289,7 @@ sqlrdirectivedeclarations.cpp: sqlrdirectivedeclarations.cpp.in
 
 sqlrdirectiveassignments.cpp: sqlrdirectiveassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../directives/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../directives/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -297,7 +297,7 @@ sqlrdirectiveassignments.cpp: sqlrdirectiveassignments.cpp.in
 
 sqlrtranslationdeclarations.cpp: sqlrtranslationdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../translations/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../translations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -305,7 +305,7 @@ sqlrtranslationdeclarations.cpp: sqlrtranslationdeclarations.cpp.in
 
 sqlrtranslationassignments.cpp: sqlrtranslationassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../translations/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../translations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -313,7 +313,7 @@ sqlrtranslationassignments.cpp: sqlrtranslationassignments.cpp.in
 
 sqlrbindvariabletranslationdeclarations.cpp: sqlrbindvariabletranslationdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../bindvariabletranslations/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../bindvariabletranslations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -321,7 +321,7 @@ sqlrbindvariabletranslationdeclarations.cpp: sqlrbindvariabletranslationdeclarat
 
 sqlrbindvariabletranslationassignments.cpp: sqlrbindvariabletranslationassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../bindvariabletranslations/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../bindvariabletranslations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -329,7 +329,7 @@ sqlrbindvariabletranslationassignments.cpp: sqlrbindvariabletranslationassignmen
 
 sqlrresultsettranslationdeclarations.cpp: sqlrresultsettranslationdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../resultsettranslations/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../resultsettranslations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -337,7 +337,7 @@ sqlrresultsettranslationdeclarations.cpp: sqlrresultsettranslationdeclarations.c
 
 sqlrresultsettranslationassignments.cpp: sqlrresultsettranslationassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../resultsettranslations/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../resultsettranslations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -345,7 +345,7 @@ sqlrresultsettranslationassignments.cpp: sqlrresultsettranslationassignments.cpp
 
 sqlrresultsetrowtranslationdeclarations.cpp: sqlrresultsetrowtranslationdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../resultsetrowtranslations/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../resultsetrowtranslations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -353,7 +353,7 @@ sqlrresultsetrowtranslationdeclarations.cpp: sqlrresultsetrowtranslationdeclarat
 
 sqlrresultsetrowtranslationassignments.cpp: sqlrresultsetrowtranslationassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../resultsetrowtranslations/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../resultsetrowtranslations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -361,7 +361,7 @@ sqlrresultsetrowtranslationassignments.cpp: sqlrresultsetrowtranslationassignmen
 
 sqlrresultsetrowblocktranslationdeclarations.cpp: sqlrresultsetrowblocktranslationdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../resultsetrowblocktranslations/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../resultsetrowblocktranslations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -369,7 +369,7 @@ sqlrresultsetrowblocktranslationdeclarations.cpp: sqlrresultsetrowblocktranslati
 
 sqlrresultsetrowblocktranslationassignments.cpp: sqlrresultsetrowblocktranslationassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../resultsetrowblocktranslations/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../resultsetrowblocktranslations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -377,7 +377,7 @@ sqlrresultsetrowblocktranslationassignments.cpp: sqlrresultsetrowblocktranslatio
 
 sqlrresultsetheadertranslationdeclarations.cpp: sqlrresultsetheadertranslationdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../resultsetheadertranslations/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../resultsetheadertranslations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -385,7 +385,7 @@ sqlrresultsetheadertranslationdeclarations.cpp: sqlrresultsetheadertranslationde
 
 sqlrresultsetheadertranslationassignments.cpp: sqlrresultsetheadertranslationassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../resultsetheadertranslations/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../resultsetheadertranslations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -393,7 +393,7 @@ sqlrresultsetheadertranslationassignments.cpp: sqlrresultsetheadertranslationass
 
 sqlrfilterdeclarations.cpp: sqlrfilterdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../filters/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../filters/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -401,7 +401,7 @@ sqlrfilterdeclarations.cpp: sqlrfilterdeclarations.cpp.in
 
 sqlrfilterassignments.cpp: sqlrfilterassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../filters/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../filters/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -409,7 +409,7 @@ sqlrfilterassignments.cpp: sqlrfilterassignments.cpp.in
 
 sqlrquerydeclarations.cpp: sqlrquerydeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../queries/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../queries/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -417,7 +417,7 @@ sqlrquerydeclarations.cpp: sqlrquerydeclarations.cpp.in
 
 sqlrqueryassignments.cpp: sqlrqueryassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../queries/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../../queries/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
